# pandas_usage_example

./: .gitignore  README.md  app.py  calc_accumulated_percentage.py  calc_income_percentage.py  calc_orders.py  calc_summary.py  calc_tariff.py  categorize_accumulated_percentage.py  consts.py  pyproject.toml  test_percentage.py  trial_task.json
